--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
-__pycache__
-.ipynb_checkpoints
-Untitled.ipynb
-datasets
-intels_packages
-real_dataset
-virtual_dataset
-
-
-prova_gpu.py
-prova.py
-FasterRCNN_Logging
-models_saved
-/bin/cocoapi
-bin/averager.py
-dataset
-bin/dataset
-Immagini
-mAP
+*.*
+!bin/*.py
